# api-gateway

./: Cargo.toml  README.md  ai-overview.md  ai.md  array.md  arrays.md  clustering.ipynb  cnn.ipynb  decision-tree.ipynb  embeddings.ipynb  gradient-boosting.ipynb  image-classification.ipynb  javascript.md  knn.ipynb  linear-regression.ipynb  logistic-regression.ipynb  naive-bayes.ipynb  neural_networks.ipynb  os.md  pca.ipynb  pre-transformer.md  python.md  quick-overview.md  random-forest.ipynb  stacking.ipynb  svm.ipynb  tokenization-byte.ipynb  transformer.ipynb  xg-boost.ipynb
JavaScript/: interfaces.ts
NLP/: NLP02.ipynb  NLP03.ipynb  NLP04.ipynb  NLP05.ipynb  NLP07.ipynb  NLP08.ipynb  NLP_Libraries.ipynb  nlp_libraries.py  text_preprocessing_lyst1760853650447.py  tokenization.ipynb
src/: circuit_breaker.rs  config.rs  context.rs  error.rs  gateway.rs  main.rs  router.rs  upstream.rs
src/engine/: api.rs  config.rs  error.rs  metrics.rs  mod.rs  models.rs  queue.rs  rate_limit.rs  store.rs  worker.rs
src/engine/sandbox/: docker.rs  language.rs  mod.rs  process.rs
src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs  validation.rs
src/ratelimit/: in_memory.rs  mod.rs  redis_backend.rs
